# todo-tracker

./: .gitignore  joplin-reference.md  new-plan.md  pyproject.toml
scripts/: cron_sync.sh
src/todo/: api.py  cli.py  client.py  joplin.py  models.py  recurring.py  settings.py  state.py  tui.py
