[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-tracker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "rich",
]

[project.scripts]
todoq = "todo.client:main"

[tool.setuptools.packages.find]
where = ["src"]
